# AI-Humanoid-Robotics-Book

./: .gitignore  .markdownlint.json  .mcp.json  404.html  CHATBOT_DEPLOYMENT_SUCCESS.md  CHATBOT_UPDATE.md  DEPLOYMENT_SUCCESS.md  MODULES_DOCUMENTATION_SUMMARY.md  PHASES_4_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_6_PROGRESS.md  PROJECT_COMPLETION_SUMMARY.md  SPECIFICATION_REMEDIATION_COMPLETE.md  docusaurus.config.js  index.html  package-lock.json  package.json  requirements.txt  sidebars.js  sitemap.xml
.context7/: config.json
.context7/metadata/: citations.json
backend/: .env.example  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt
backend/scripts/: check_qdrant.py  reindex_book.py  setup_infrastructure.py  setup_postgres.py  setup_qdrant.py
backend/src/: __init__.py  config.py  main.py
backend/src/models/: requests.py  responses.py
backend/src/routes/: chat.py  health.py
backend/src/services/: __init__.py  agent.py  database.py  embeddings.py  retrieval.py
backend/src/utils/: __init__.py  chunking.py  errors.py  hashing.py  logging.py  retry.py  session.py  validation.py
backend/tests/: __init__.py  conftest.py  test_api.py
docker/: Dockerfile.gazebo  Dockerfile.isaac-ros  Dockerfile.ros2-base  README.md  entrypoint.sh
docs/: conventions.html  conventions.md  hardware-options.html  hardware-options.md  how-to-use.html  how-to-use.md  intro.html  intro.md  preface.html  preface.md  quality-gates.html  quality-gates.md  review-process.html  review-process.md
src/css/: custom.css
(+497 files in other folders)
